--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,4 @@
 @import 'tailwindcss';
-@plugin "daisyui";
+@plugin "daisyui" {
+  themes: light --default, dark, cupcake, cyberpunk, valentine, retro;
+}
